grid layout overflow fixed

--- a/src/App.scss
+++ b/src/App.scss
@@ -99,13 +99,14 @@ nav {
   width: 80vw;
   margin: 2rem auto;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  // grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   column-gap: 1rem;
   row-gap: 1rem;
   // max-height: 70vh;
   padding: 1rem;
   border-radius: 4px;
-  box-shadow: 0 0 0 0.25rem rgb(241, 241, 241);
+  // box-shadow: 0 0 0 0.25rem rgb(241, 241, 241);
 
   .card {
     height: 200px;
@@ -114,6 +115,7 @@ nav {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    overflow: hidden;
 
     .card__header {
       height: 4rem;
